# tldwatch

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_STEPS.md  PROXY_INTEGRATION_SUMMARY.md  PROXY_SETUP.md  README.md  README_UPDATE.md  ReadMe.md  SIMPLIFICATION_SUMMARY.md  SIMPLIFIED_INTERFACE.md  USER_CONFIGURATION.md  WEBSHARE_INTEGRATION.md  batch_load.py  generate_thread.py  get_transcript.py  main.py  prompt.json  pyproject.toml  requirements.txt  scheduler.py  setup_proxy_test.py  summarize.py  summarizer.py  test_connection.py  test_proxy_integration.py  utils.py
.github/workflows/: twitter-post.yml
archive/tests/: conftest.py
archive/tests/integration/: test_config_loading.py  test_summarizer_integration.py
archive/tests/integration/proxy/: test_proxy_setup.py
archive/tests/unit/core/: test_config.py  test_summarizer.py
archive/tests/unit/utils/: test_url_parser.py
examples/: README.md  cache_usage.py  cli_demo.py  cli_examples.txt  cli_usage.py  complete_proxy_example.py  config_usage.py  library_usage.py  migration_demo.py  new_architecture_demo.py  post_summary.py  proxy_usage.py  quickstart.py  simple_example.py  simple_usage.py  user_config_demo.py
schedule/: schedule.json
src/tldwatch/: __init__.py
src/tldwatch/cli/: cache.py  main.py  main_new.py  simple_cli.py
src/tldwatch/core/: chunking.py  config.py  proxy_config.py  simple_summarizer.py  summarizer.py  summarizer_new.py  user_config.py
src/tldwatch/core/providers/: __init__.py  __init__new.py  anthropic.py  anthropic_provider.py  base.py  base_provider.py  cerebras.py  config.yaml  config_loader.py  deepseek.py  google.py  groq.py  ollama.py  openai.py  openai_provider.py  provider_factory.py  provider_registry.py  request_handler.py  unified_provider.py
src/tldwatch/utils/: cache.py  metadata.py  url_parser.py
tests/: README.md  conftest.py  x_api_test.py
tests/integration/: test_cli_integration.py  test_summarizer_integration.py
tests/integration/proxy/: __init__.py  test_proxy_integration.py
tests/unit/cli/: test_main.py
tests/unit/core/: test_config.py  test_proxy_config.py  test_summarizer.py  test_unified_provider.py  test_user_config.py
tests/unit/core/providers/: test_providers.py
tests/unit/utils/: test_cache.py  test_url_parser.py
