[project]
name = "tldwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "smith-nathanh", email = "smith.nathanh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "backoff>=2.2.1",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "youtube-transcript-api>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
