[project]
name = "tldwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "smith-nathanh", email = "smith.nathanh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "backoff>=2.2.1",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "youtube-transcript-api>=0.6.3",
]

# Add CLI entry point
[project.scripts]
tldwatch = "tldwatch.cli.main:cli_entry"

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["src/tldwatch"]

[tool.hatch.build]
include = [
    "src/tldwatch/**/*.py",
    "src/tldwatch/py.typed",
]
