[project]
name = "tldwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "smith-nathanh", email = "smith.nathanh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "backoff>=2.2.1",
    "pyyaml>=6.0",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "youtube-transcript-api>=1.1.1",
]

# CLI entry points
[project.scripts]
tldwatch = "tldwatch.cli.main:cli_entry"

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
examples = [
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["src/tldwatch"]

[tool.hatch.build]
include = [
    "src/tldwatch/**/*.py",
    "src/tldwatch/py.typed",
]
